# yada

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: package.yml  pythonpackage.yml  test.yml
src/yada/: config.py  exceptions.py  platform.py  repo.py  xdg.py
src/yada/cli/: main.py
src/yada/data/: config.yaml
tests/: test_cli.py  test_repo.py
yada/: __init__.py
yada/cli/: main.py
