[tool.poetry]
name = "yada"
version = "0.9.11"
description = "Yet another dotfile aggregator"
authors = ["Adrian Petrescu <adrian@apetre.sc>"]
license = "MIT"
readme = "README.md"
include = ["data/config.yaml"]

[tool.poetry.dependencies]
python = "^3.9"
click = ">=7.0,<8.0"
pyyaml = "<5.4.0 || >5.4.0,<5.4.1 || >5.4.1,<6.0.0 || >6.0.0"

[tool.poetry.group.dev.dependencies]
pyfakefs = "^5.3.4"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
coverage = "^7.4.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
yada = "yada.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
